--- a/02-android/MiAplicacion/app/src/main/AndroidManifest.xml
+++ b/02-android/MiAplicacion/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Actividad_Dos" android:launchMode="singleTask">
+        <activity android:name=".Parcelable">
+        </activity>
+        <activity
+                android:name=".Actividad_Dos"
+                android:launchMode="singleTask">
         </activity>
         <activity
                 android:name=".MainActivity"
